<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>desktop_arm</name>
  <version>1.5.0</version>
  <description>ROS2 controller drivers for desktop arm</description>
  <maintainer email="jonathan@shulgach.com">Jonathan Shulgach</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>moveit_common</depend>
  
  
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_servo</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>geometric_shapes</build_depend>
  
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
