<?xml version="1.0"?>
<package format="3">
  <name>desktop_arm_description</name>
  <version>2.0.0</version>
  <description>
    <p>
      This package contains configuration data, 3D models and launch files
      for the desktop arm.
    </p>
  </description>
  <author>Jonathan Shulgach (Carnegie Mellon University)</author>
  <maintainer email="jonathan@shulgach.com">Jonathan Shulgach</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
